#VERSION 0.9.0#

 - fixed method getPropertiesByInheritance() following the change of getProperties() in Peak_Zreflection
 - rewrited completly getProperties() to return all infos of properties in array format in Peak_Zreflection
 - modified method docTagsToArray() to accept object or array of object in Peak_Zreflection
 - fixed method getMethodsByInheritance() following the change of getMethods() in Peak_Zreflection
 - rewrited completly getMethods() to return all infos of methods in array format in Peak_Zreflection
 - added method getMethodDeclaration() in Peak_Zreflection
 - modified array key name inside method docTagsToArray() of class Peak_Zreflection
 - modified method getMethodDocTags() from Peak_Zreflection to use docTagsToArray() instead of 
   returning Zend_Reflection_Docblock object
 - fixed variable name error in method __call() of class Peak_Controller_Action
 - fixed array offset problem in _exception2table() of class Peak_Controller_Internal_PkError
 - fixed method getMethodDoc() who was not returning long description in class Peak_Zreflection
 - fixed variable name error in getMethodsByInheritance() of class Peak_Zreflection
 - fixed minor trim problem of method getClassDeclaration() in Peak_Zreflection
 - modified getClassDocTags() of Peak_Zreflection to return array instead of object
 - added methods getParentMethods(), getSelfMethods(), getParentProperties() and getSelfProperties() to Peak_Zreflection
 - fixed method paramsToArray() from Peak_Zreflection
 - added methods getMethods(), getProperties() and getConstants() to Peak_Zreflection
 - added method query() to Peak_Model_Zendatable
 - fixed methods render() and output() in Peak_Render_VirtualLayouts due to recent change in Peak_View_Render
 - fixed Vendors path name in autoload.php
 - added constant PHP_CLOSE_TAG to Peak_Codegen
 - passed method generate() to abstract method in Peak_Codegen
 - moved method getIndent() from Peak_Codegen_Class to Peak_Codegen